--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-generar-acta-inicio-const-tecnico/form-generar-acta-inicio-const-tecnico.component.html
@@ -35,7 +35,7 @@
         </p>
         <p>
           <strong>Nombre de la entidad contratista de interventoría: </strong
-          >{{ this.contrato.usuarioInterventoria.nombres }} {{ this.contrato.usuarioInterventoria.apellidos }}
+          >{{ this.contrato.usuarioInterventoria.primerNombre }} {{ this.contrato.usuarioInterventoria.primerApellido }}
         </p>
         <p>
           <strong>Número de identificación del representante legal del contratista de obra: </strong
@@ -66,8 +66,8 @@
           {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
         </p>
         <p>
-          <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.nombres }}
-          {{ this.contrato.usuarioInterventoria.apellidos }}
+          <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.primerNombre }}
+          {{ this.contrato.usuarioInterventoria.primerApellido }}
         </p>
       </div>
       <p>
