--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-validar-acta-inicio-construccion/form-validar-acta-inicio-construccion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/form-validar-acta-inicio-construccion/form-validar-acta-inicio-construccion.component.html
@@ -43,8 +43,8 @@
           {{ this.contrato.usuarioInterventoria.numeroIdentificacion }}
         </p>
         <p>
-          <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.nombres }}
-          {{ this.contrato.usuarioInterventoria.apellidos }}
+          <strong>Nombre Supervisor: </strong>{{ this.contrato.usuarioInterventoria.primerNombre }}
+          {{ this.contrato.usuarioInterventoria.primerApellido }}
         </p>
       </div>
       <div *ngIf="this.valorProponente == '2'">
