--- a/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-registrar-participantes/form-registrar-participantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/sesion-comite-fiduciario/components/form-registrar-participantes/form-registrar-participantes.component.html
@@ -25,7 +25,7 @@
         <mat-form-field class="select-width">
           <mat-select formControlName="miembrosParticipantes" multiple required>
             <mat-option *ngFor="let miembro of miembrosArray" [value]="miembro">
-              {{ miembro.nombres }} {{ miembro.apellidos }}
+              {{ miembro.primerNombre }} {{ miembro.primerApellido }}
             </mat-option>
           </mat-select>
         </mat-form-field>
