--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/observacion/observacion.component.html
@@ -26,7 +26,7 @@
       <tbody>
         <tr *ngFor="let observacion of listaObservaciones">
           <td class="mat-cell cdk-cell ng-star-inserted">
-            {{ observacion.sesionParticipante.usuario.nombres }}
+            {{ observacion.sesionParticipante.usuario.primerNombre }}
           </td>
           <td class="mat-cell cdk-cell ng-star-inserted">
             <div class="p-table" [innerHTML]="observacion.observacion"></div>
