--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -14,7 +14,7 @@
                     Registro
                 </mat-card-title>
             </mat-card-header>
-            <mat-card-content>
+            <mat-card-content class="ml-2em">
                 <div class="row">
                     <div class="col-md-7">
                       <div class="row">
@@ -300,12 +300,11 @@
                     </div>
                 </div>
 
-                <div class="row" style="margin-left: .5em !important;">
-                    <div class="col-md-12">
+                <div class="row">
+                    <div class="col-md-7">
                       <div class="row">
                             <div class="pr-1">
                                 <label    class="label-left"
-                                          style="margin-top: .9em;"
                                           for="correo"
                                           [class.color-secondaryColor]="( formUsuario.get('correo').invalid && formUsuario.get('correo').touched) || ( formUsuario.get('correo').invalid && esRegistroNuevo === false )">
                                           Correo electrónico
@@ -315,7 +314,7 @@
                                 <mat-form-field>
                                     <input  matInput
                                             type="text"
-                                            maxlength="50"
+                                            maxlength="100"
                                             #correo
                                             formControlName="correo"
                                             style="width: 100%;"
@@ -325,7 +324,7 @@
                                         [matTooltipPosition]="'above'"
                                         matTooltip="Campo alfanumérico"
                                         matTooltipClass="info-tooltip">
-                                        {{ 50 - correo.value.length }}
+                                        {{ 100 - correo.value.length }}
                                 </span>
                             </div>
                             <span class="icon-incompleto">
@@ -681,13 +680,12 @@
                     Procedencia
                 </mat-card-title>
             </mat-card-header>
-            <mat-card-content>
+            <mat-card-content class="ml-2em">
                 <div class="row">
                     <div class="col-md-7">
                       <div class="row">
                         <div class="pr-1">
                           <label    class="label-left"
-                                    style="margin-top: 1.8em;"
                                     for="dependencia"
                                     [class.color-secondaryColor]="( formUsuario.get('dependencia').invalid && formUsuario.get('dependencia').touched) || ( formUsuario.get('dependencia').invalid && esRegistroNuevo === false )">
                                     Dependencia
@@ -787,7 +785,71 @@
                     </div>
                 </div>
 
-                <section *ngIf="formUsuario.get( 'rol' ).value !== null">
+                <div class="row" *ngIf="formUsuario.get( 'rol' ).value !== null">
+                  <div class="col-md-7">
+                    <div class="row">
+                      <div class="pr-1">
+                          <label  class="label-left"
+                                  for="tieneContratos"
+                                  [ngClass]="{'color-secondaryColor': (formUsuario.get('tieneContratos').invalid && formUsuario.get('tieneContratos').touched) || formUsuario.get('tieneContratos').invalid && esRegistroNuevo === false }">
+                                  ¿Tiene asignado contratos?
+                          </label>
+                      </div>
+                      <div>
+                          <mat-radio-group class="radioInput" formControlName="tieneContratos" required>
+                              <mat-radio-button [value]="true"> Sí </mat-radio-button>
+                              <mat-radio-button [value]="false"> No </mat-radio-button>
+                          </mat-radio-group>
+                          <span class="required-form-group" style="margin-left: 1px">*</span>
+                      </div>
+                      <span class="icon-incompleto">
+                        <img
+                          class="icon-incompleto--img"
+                          src="assets/img/icon/incompleto.svg"
+                          alt="este campo es requerido"
+                          [matTooltipPosition]="'above'"
+                          matTooltip="Debe ingresar la información en el campo para continuar"
+                          matTooltipClass="info-tooltip"
+                          *ngIf="( formUsuario.get('tieneContratos').invalid && formUsuario.get('tieneContratos').touched) || (formUsuario.get('tieneContratos').invalid && esRegistroNuevo === false )">
+                      </span>
+                    </div>
+                  </div>
+              </div>
+
+                <div class="row" *ngIf="formUsuario.get( 'tieneContratos' ).value === true">
+                    <div class="col-md-7">
+                        <div class="row">
+                            <div class="pr-1">
+                                <label    class="label-left"
+                                          style="margin-top: 1.8em;"
+                                          for="tipoAsignacionCodigo"
+                                          [class.color-secondaryColor]="( formUsuario.get('tipoAsignacionCodigo').invalid && formUsuario.get('tipoAsignacionCodigo').touched) || ( formUsuario.get('tipoAsignacionCodigo').invalid && esRegistroNuevo === false )">
+                                          Rol asignado al contrato
+                                </label>
+                            </div>
+                            <div class="col d-flex">
+                                <mat-form-field appearance="fill" style="width: 91%;">
+                                    <mat-select class="padding-left" formControlName="tipoAsignacionCodigo" required (ngModelChange)="getlistaContratos( $event )">
+                                      <mat-option *ngFor="let value of listaAsignaciones" [value]="value.codigo">
+                                          {{ value.nombre }}
+                                      </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <span class="icon-incompleto" style="margin-top: .5em;">
+                                <img    class="icon-incompleto--img"
+                                        src="assets/img/icon/incompleto.svg"
+                                        alt="este campo es requerido"
+                                        [matTooltipPosition]="'above'"
+                                        matTooltip="Debe ingresar la información en el campo para continuar"
+                                        matTooltipClass="info-tooltip"
+                                        *ngIf="( formUsuario.get('tipoAsignacionCodigo').invalid && formUsuario.get('tipoAsignacionCodigo').touched ) || ( formUsuario.get('tipoAsignacionCodigo').invalid && esRegistroNuevo === false )">
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <section *ngIf="formUsuario.get( 'tieneContratos' ).value === true">
                     <h3 class="colorMainColor" style="margin: .5em 0 0 .5em !important;"><b> {{ getRolSeleccionado( formUsuario.get( 'rol' ).value ) }} </b></h3>
 
                     <div class="row" style="margin-left: .5em !important;">
@@ -804,8 +866,8 @@
                                 <div class="col d-flex">
                                     <mat-form-field appearance="fill" style="width: 96%;">
                                         <mat-select class="padding-left" multiple formControlName="contratos" required>
-                                            <mat-option *ngFor="let value of listaContratos" [value]="value.codigo">
-                                                {{ value.nombre }}
+                                            <mat-option *ngFor="let value of listaContratos" [value]="value">
+                                                {{ value.numeroContrato }}
                                             </mat-option>
                                         </mat-select>
                                     </mat-form-field>
@@ -825,6 +887,19 @@
                         </div>
                     </div>
                 </section>
+            </mat-card-content>
+        </mat-card>
+
+        <mat-card class="shipping-card" align="left" *ngIf="esRegistroNuevo === false && perfil !== undefined">
+            <mat-card-header class="header-card">
+                <mat-card-title class="header-card--text">
+                    Auditoria
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content class="ml-2em">
+                <p><b>Estado: </b> <i> {{ perfil.eliminado === false ? 'Activo' : 'Inactivo' }} </i></p>
+                <p><b>Ultimo Ingreso: </b> <i> {{ perfil.fechaUltimoIngreso !== undefined ? ( perfil.fechaUltimoIngreso | date: 'dd/MM/yyyy' ) : '' }} </i></p>
+                <p><b>Ultimo cambio de Contraseña: </b> <i> {{ perfil.fechaCambioPassword !== undefined ? ( perfil.fechaCambioPassword | date: 'dd/MM/yyyy' ) : '' }} </i></p>
             </mat-card-content>
         </mat-card>
     
