--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-parametricas/components/consultar-editar-parametricas/consultar-editar-parametricas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-parametricas/components/consultar-editar-parametricas/consultar-editar-parametricas.component.html
@@ -1,1 +1,23 @@
-<p>consultar-editar-parametricas works!</p>
+<div class="container text-center">
+    <div class="text-right">
+        <a routerLink="/gestionParametricas" mat-button color="primary" class="btn-regresar">
+            <img src="assets/img/icon/regresar.svg" alt="Regresar">
+        </a>
+    </div>
+    <h1 class="title-menu--h1">
+        Consultar / Editar paramétrica
+    </h1>
+  
+    <mat-card class="shipping-card border mt-3em" align="left">
+        <mat-card-header class="header-card">
+          <mat-card-title class="header-card--text card-title-detalle">
+            Parametrica
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+            <p style="margin-left: 2em;"> <i>Tipo de intervensión</i> </p>
+        </mat-card-content>
+    </mat-card>
+    
+    <app-tabla-editar-parametricas></app-tabla-editar-parametricas>
+</div>
