--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-usuarios/components/form-gestionar-usuarios/form-gestionar-usuarios.component.html
@@ -866,7 +866,7 @@
                                 <div class="col d-flex">
                                     <mat-form-field appearance="fill" style="width: 96%;">
                                         <mat-select class="padding-left" multiple formControlName="contratos" required>
-                                            <mat-option *ngFor="let value of listaContratos" [value]="value">
+                                            <mat-option *ngFor="let value of listaContratos" [value]="value.contratoId">
                                                 {{ value.numeroContrato }}
                                             </mat-option>
                                         </mat-select>
