--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/home/home.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/home/home.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="mt-2em mb-2em">
-    <a routerLink="registrarSolicitud" mat-raised-button color="accent">
+    <a (click)="registrarSolicitud()" mat-raised-button color="accent">
       Registrar solicitud de novedad
     </a>
   </div>
