--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/registrar-solicitud/registrar-solicitud.component.html
@@ -134,7 +134,12 @@
 
   <div class="animatedDown" 
         *ngIf="(novedadAplicada.value == true && contrato) || ( novedadAplicada.value == false && proyecto)">
-    <app-expansion-panel></app-expansion-panel>
+    
+        <app-expansion-panel
+                            [proyecto]=proyecto
+                            [contrato]=contrato
+                            [novedad]=novedad>
+        </app-expansion-panel>
   </div>
 
 </section>
