--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-novedad-contractual/components/tabla-solicitud-novedad-contractual/tabla-solicitud-novedad-contractual.component.html
@@ -63,7 +63,7 @@
           Rechazar solicitud
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table"
-          [routerLink]="[ 'qwerty', element.novedadContractualId ]">
+          [routerLink]="[ '/registrarSolicitudNovedadContractual/registrarSolicitud', element.novedadContractualId ]">
           Ver detalle/Editar
         </a>
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
