--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/dialog-observaciones-vfsp/dialog-observaciones-vfsp.component.html
@@ -13,8 +13,18 @@
             <div class="col-md-12" style="padding-left: 0;">
                 <div>
                     <div class="d-flex align-items-center">
-                        <div class="text-area-quill" style="text-align: left; margin-top: 1em; max-width: calc(100% - 2.3em); margin-left: -2em;">
-                            <label for="observaciones" class="text-area-quill--label size-label colorMainColor">
+                        <div class="text-area-quill"               
+                        [ngClass]="{
+                            'color-secondaryColor':
+                              (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                              (addressForm.get('observaciones').invalid && estaEditando)
+                          }" style="text-align: left; margin-top: 1em; max-width: calc(100% - 2.3em); margin-left: -2em;">
+                            <label for="observaciones" class="text-area-quill--label size-label"
+                            [ngClass]="{
+                                'colorMainColor':
+                                  !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                  (addressForm.get('observaciones').invalid && estaEditando))
+                              }">
                                 Observaciones
                             </label>
                             <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
@@ -27,13 +37,32 @@
                         <span class="contador miles" *ngIf="!addressForm.controls.observaciones.value">
                             1000
                         </span>
+                        <span class="icon-incompleto">
+                            <img
+                              class="icon-incompleto--img"
+                              src="assets/img/icon/incompleto.svg"
+                              alt="este campo es requerido"
+                              [matTooltipPosition]="'above'"
+                              matTooltip="Debe ingresar la información en el campo para continuar"
+                              matTooltipClass="info-tooltip"
+                              *ngIf="
+                                (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                                (addressForm.get('observaciones').invalid && estaEditando)
+                              "
+                            />
+                          </span>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row mtop justCenter">
             <div class="col-md-5">
-                <label class="label-left supportBlack">¿Esta observacion se puede subsanar?</label>
+                <label class="label-left supportBlack" for="puedeSubsanar" 
+                [ngClass]="{
+                    'color-secondaryColor':
+                      (addressForm.get('puedeSubsanar').invalid && addressForm.get('puedeSubsanar').touched) ||
+                      (addressForm.get('puedeSubsanar').invalid && estaEditando)
+                  }">¿Esta observacion se puede subsanar?</label>
             </div>
             <div class="col-md-3">
                 <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
@@ -43,6 +72,20 @@
                 </mat-radio-group>
                 <span class="required-form-group" style="margin-left: 1px;">*</span>
             </div>
+            <span class="icon-incompleto">
+                <img
+                  class="icon-incompleto--img"
+                  src="assets/img/icon/incompleto.svg"
+                  alt="este campo es requerido"
+                  [matTooltipPosition]="'above'"
+                  matTooltip="Debe ingresar la información en el campo para continuar"
+                  matTooltipClass="info-tooltip"
+                  *ngIf="
+                    (addressForm.get('puedeSubsanar').invalid && addressForm.get('puedeSubsanar').touched) ||
+                    (addressForm.get('puedeSubsanar').invalid && estaEditando)
+                  "
+                />
+              </span>
         </div>
         <div class="text-center" style="margin-top: 15px;">
             <button mat-raised-button color="accent" class="btn-dialog" type="submit" [disabled]="addressForm.invalid">
