--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-financ-solicitud-pago/components/verificar-financ-solicitud-pago/verificar-financ-solicitud-pago.component.html
@@ -41,7 +41,10 @@
             <ng-container matColumnDef="estadoRegistro">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del registro </th>
                 <td mat-cell *matCellDef="let element" align="center">
-                    <span class="info-text info-text__table" [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}" style="margin-right: 15px;"></span>
+                    <span class="info-text info-text__table"
+                        [ngClass]="{'sin-diligenciar' : element.estadoRegistro=='Incompleto', 'completo' : element.estadoRegistro=='Completo'}"
+                        style="margin-right: 0em;"></span>
+                    <br>
                     {{ element.estadoRegistro }} 
                 </td>
             </ng-container>
