Fix 4.1.8 Front icon incomplete

--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-amortizacion/form-amortizacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-amortizacion/form-amortizacion.component.html
@@ -6,8 +6,10 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left;">
-            <p><strong>Porcentaje de amortización:</strong> {{ detalleForm.get( 'porcentajeAmortizacion' ).value }}% </p>
-            <p><strong>Valor de amortización:</strong> ${{ detalleForm.get( 'valorAmortizacion' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+            <p><strong>Porcentaje de amortización:</strong> {{ detalleForm.get( 'porcentajeAmortizacion' ).value }}%
+            </p>
+            <p><strong>Valor de amortización:</strong> ${{ detalleForm.get( 'valorAmortizacion' ).value | currency:'
+                ':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
     </mat-card>
 
@@ -20,9 +22,12 @@
             </mat-card-header>
             <mat-card-content style="text-align: left;">
                 <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
-                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la supervisión tiene observaciones a la amortización del anticipo?:</b> Si</p>
-                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la supervisión tiene observaciones a la amortización del anticipo?:</b> No</p>
-                <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la supervisión tiene
+                        observaciones a la amortización del anticipo?:</b> Si</p>
+                <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la supervisión tiene
+                        observaciones a la amortización del anticipo?:</b> No</p>
+                <section [innerHTML]="addressForm.get( 'observaciones' ).value"
+                    *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
             </mat-card-content>
         </mat-card>
     </ng-container>
@@ -30,8 +35,7 @@
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
             <div class="row mtop justCenter">
                 <div class="col-md-5">
-                    <label class="label-left" for="tieneObservaciones" 
-                    [ngClass]="{
+                    <label class="label-left" for="tieneObservaciones" [ngClass]="{
                         'color-secondaryColor':
                           (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
                           (addressForm.get('tieneObservaciones').invalid && estaEditando)
@@ -46,25 +50,29 @@
                     <span class="required-form-group" style="margin-left: 1px;">*</span>
                 </div>
                 <span class="icon-incompleto">
-                    <img
-                      class="icon-incompleto--img"
-                      src="assets/img/icon/incompleto.svg"
-                      alt="este campo es requerido"
-                      [matTooltipPosition]="'above'"
-                      matTooltip="Debe ingresar la información en el campo para continuar"
-                      matTooltipClass="info-tooltip"
-                      *ngIf="
+                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip" *ngIf="
                       (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
                       (addressForm.get('tieneObservaciones').invalid && estaEditando)
-                      "
-                    />
-                  </span>
+                      " />
+                </span>
             </div>
             <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                <div class="text-area-quill izqTitle">
-                    <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a la amortización del anticipo</label>
+                <div class="text-area-quill izqTitle" [ngClass]="{
+                    'color-secondaryColor':
+                      (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                      (addressForm.get('observaciones').invalid && estaEditando)
+                  }">
+                    <label for="observaciones" class="text-area-quill--label" [ngClass]="{
+                        'colorMainColor':
+                          !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                          (addressForm.get('observaciones').invalid && estaEditando))
+                      }">Observaciones a la amortización del anticipo</label>
                     <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                        (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones>
+                    </quill-editor>
                 </div>
                 <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
                     {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
@@ -72,9 +80,17 @@
                 <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
                     1000
                 </span>
+                <span class="icon-incompleto">
+                    <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                        [matTooltipPosition]="'above'"
+                        matTooltip="Debe ingresar la información en el campo para continuar"
+                        matTooltipClass="info-tooltip" *ngIf="
+                        (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                        (addressForm.get('observaciones').invalid && estaEditando)
+                      " />
+                </span>
             </div>
-            <button mat-button color="warn" class="btn-guardar"
-                type="submit" [disabled]="addressForm.dirty === false">
+            <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.dirty === false">
                 <img src="assets/img/icon/guardar.svg" alt="Guardar">
             </button>
         </form>
