--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/form-observacion-expensas/form-observacion-expensas.component.html
@@ -1,4 +1,5 @@
-<section class="container text-center mb-2em" *ngIf="solicitudPago !== undefined && detalleForm.get( 'conceptoPagoCriterio' ).value !== null">
+<section class="container text-center mb-2em"
+    *ngIf="solicitudPago !== undefined && detalleForm.get( 'conceptoPagoCriterio' ).value !== null">
     <div class="text-right">
         <a routerLink="/verificarSolicitudPago" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
@@ -10,7 +11,7 @@
     <p style="margin-top: 0.5em;">
         <span>Tipo de solicitud: <b>Expensas</b></span>
     </p>
-    
+
     <mat-card class="shipping-card">
         <mat-card-header class="header-card header-card--margin">
             <mat-card-title class="header-card--text">
@@ -21,17 +22,24 @@
             <p><strong>Llave MEN:</strong> {{ detalleForm.get( 'llaveMen' ).value }} </p>
             <p><strong>Número de radicado SAC:</strong> {{ detalleForm.get( 'numeroRadicadoSAC' ).value }} </p>
             <p><strong>Número de factura:</strong> {{ detalleForm.get( 'numeroFactura' ).value }} </p>
-            <p><strong>Valor facturado:</strong> ${{ detalleForm.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+            <p><strong>Valor facturado:</strong> ${{ detalleForm.get( 'valorFacturado' ).value | currency:'
+                ':'symbol-narrow':'.0-0' }} </p>
             <p><strong>Tipo de pago:</strong> {{ detalleForm.get( 'tipoPago' ).value.nombre }} </p>
-            <p><strong>Concepto de pago para el criterio:</strong> {{ detalleForm.get( 'conceptoPagoCriterio' ).value.nombre }} </p>
-            <p><strong>Valor facturado al concepto:</strong> ${{ detalleForm.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
+            <p><strong>Concepto de pago para el criterio:</strong> {{ detalleForm.get( 'conceptoPagoCriterio'
+                ).value.nombre }} </p>
+            <p><strong>Valor facturado al concepto:</strong> ${{ detalleForm.get( 'valorFacturadoConcepto' ).value |
+                currency:' ':'symbol-narrow':'.0-0' }} </p>
         </mat-card-content>
     </mat-card>
 
     <form [formGroup]="expensasForm">
         <div class="row mtop justCenter">
             <div class="col-md-5">
-                <label class="label-left">¿Tiene observaciones a la solicitud de pago?</label>
+                <label class="label-left" [ngClass]="{
+                    'color-secondaryColor':
+                      (expensasForm.get('tieneObservaciones').invalid && expensasForm.get('tieneObservaciones').touched) ||
+                      (expensasForm.get('tieneObservaciones').invalid && estaEditando)
+                  }">¿Tiene observaciones a la solicitud de pago?</label>
             </div>
             <div class="col-md-2">
                 <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
@@ -41,12 +49,29 @@
                 </mat-radio-group>
                 <span class="required-form-group" style="margin-left: 1px;">*</span>
             </div>
+            <span class="icon-incompleto">
+                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                    [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip" *ngIf="
+                  (expensasForm.get('tieneObservaciones').invalid && expensasForm.get('tieneObservaciones').touched) ||
+                  (expensasForm.get('tieneObservaciones').invalid && estaEditando)
+                  " />
+            </span>
         </div>
         <div class="d-flex align-items-center mtop" *ngIf="expensasForm.get('tieneObservaciones').value === true">
-            <div class="text-area-quill izqTitle">
-                <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a la solicitud de pago</label>
+            <div class="text-area-quill izqTitle" [ngClass]="{
+                'color-secondaryColor':
+                (expensasForm.get('observaciones').invalid && expensasForm.get('observaciones').touched) ||
+                (expensasForm.get('observaciones').invalid && estaEditando)
+              }">
+                <label for="observaciones" class="text-area-quill--label" [ngClass]="{
+                    'colorMainColor':
+                      !((expensasForm.get('observaciones').invalid && expensasForm.get('observaciones').touched) ||
+                      (expensasForm.get('observaciones').invalid && estaEditando))
+                  }">Observaciones a la solicitud de pago</label>
                 <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                    (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                    (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones>
+                </quill-editor>
             </div>
             <span class="contador miles" *ngIf="expensasForm.get('observaciones').value">
                 {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
@@ -54,8 +79,17 @@
             <span class="contador miles" *ngIf="expensasForm.get('observaciones').value === null">
                 1000
             </span>
+            <span class="icon-incompleto">
+                <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg" alt="este campo es requerido"
+                    [matTooltipPosition]="'above'" matTooltip="Debe ingresar la información en el campo para continuar"
+                    matTooltipClass="info-tooltip" *ngIf="
+                  (expensasForm.get('observaciones').invalid && expensasForm.get('observaciones').touched) ||
+                  (expensasForm.get('observaciones').invalid && estaEditando)
+                  " />
+            </span>
         </div>
-        <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()" [disabled]="expensasForm.dirty === false">
+        <button mat-button color="warn" class="btn-guardar" type="button" (click)="guardar()"
+            [disabled]="expensasForm.dirty === false">
             <img src="assets/img/icon/guardar.svg" alt="Guardar">
         </button>
     </form>
@@ -89,14 +123,19 @@
                     </mat-card-title>
                 </mat-card-header>
                 <mat-card-content style="text-align: left;">
-                    <p><strong>URL con soporte:</strong> {{ solicitudPago.solicitudPagoSoporteSolicitud[0].urlSoporte }} </p>
+                    <p><strong>URL con soporte:</strong> {{ solicitudPago.solicitudPagoSoporteSolicitud[0].urlSoporte }}
+                    </p>
                 </mat-card-content>
             </mat-card>
 
             <form [formGroup]="addressForm">
                 <div class="row mtop justCenter">
                     <div class="col-md-5">
-                        <label class="label-left">¿Desde la supervisión tiene observaciones a el soporte de la solicitud?</label>
+                        <label class="label-left" [ngClass]="{
+                            'color-secondaryColor':
+                              (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                              (addressForm.get('tieneObservaciones').invalid && estaEditando)
+                          }">¿Desde la supervisión tiene observaciones a el soporte de la solicitud?</label>
                     </div>
                     <div class="col-md-2">
                         <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
@@ -106,12 +145,31 @@
                         </mat-radio-group>
                         <span class="required-form-group" style="margin-left: 1px;">*</span>
                     </div>
+                    <span class="icon-incompleto">
+                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido" [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip" *ngIf="
+                          (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                          (addressForm.get('tieneObservaciones').invalid && estaEditando)
+                          " />
+                    </span>
                 </div>
-                <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                    <div class="text-area-quill izqTitle">
-                        <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a el soporte de la solicitud</label>
+                <div class="d-flex align-items-center mtop"
+                    *ngIf="addressForm.get('tieneObservaciones').value === true">
+                    <div class="text-area-quill izqTitle" [ngClass]="{
+                        'color-secondaryColor':
+                          (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                          (addressForm.get('observaciones').invalid && estaEditando)
+                      }">
+                        <label for="observaciones" class="text-area-quill--label" [ngClass]="{
+                            'colorMainColor':
+                              !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                              (addressForm.get('observaciones').invalid && estaEditando))
+                          }">Observaciones a el soporte de la solicitud</label>
                         <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
-                            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
+                            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones>
+                        </quill-editor>
                     </div>
                     <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
                         {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
@@ -119,8 +177,18 @@
                     <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
                         1000
                     </span>
+                    <span class="icon-incompleto">
+                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido" [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip" *ngIf="
+                            (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                            (addressForm.get('observaciones').invalid && estaEditando)
+                          " />
+                    </span>
                 </div>
-                <button mat-button color="warn" class="btn-guardar" type="button" (click)="onSubmit()" [disabled]="addressForm.dirty === false">
+                <button mat-button color="warn" class="btn-guardar" type="button" (click)="onSubmit()"
+                    [disabled]="addressForm.dirty === false">
                     <img src="assets/img/icon/guardar.svg" alt="Guardar">
                 </button>
             </form>
