--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-criterio-pagos/obs-criterio-pagos.component.html
@@ -5,74 +5,115 @@
     </p>
     <div class="d-flex justify-content-center" *ngIf="criteriosArraySeleccionados.length > 0">
         <strong>Criterios de pago:</strong>
-        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{ filterCriterios( criterio.codigo ) }}<span *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
+        <p *ngFor="let criterio of criteriosArraySeleccionados; index as i" style="margin-left: .4em;"> {{
+            filterCriterios( criterio.codigo ) }}<span
+                *ngIf="criteriosArraySeleccionados.length - 1 !== i">,</span><span
+                *ngIf="criteriosArraySeleccionados.length - 1 === i">.</span> </p>
     </div>
     <section *ngIf="criterios.length > 0">
-            <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-                <div formArrayName="criterios">
-                    <div *ngFor="let criterio of criterios.controls" [formGroup]="criterio">
-                        <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
-                            <mat-card-header class="header-card header-card--margin">
-                                <mat-card-title class="header-card--text textoGris">
-                                    {{ criterio.get( 'nombreCriterio' ).value }}
-                                </mat-card-title>
-                            </mat-card-header>
-                            <mat-card-content style="text-align: left;">
-                                <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
-                                <!--
-                                    <p><strong>Concepto de pago para el criterio:</strong> {{ criterio.get( 'conceptoPago' ).value.nombre }} </p>
-                                -->
-                                <p><strong>Valor facturado al concepto:</strong> $ {{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
-                            </mat-card-content>
-                        </mat-card>
-                    </div>
-                </div>
-                <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+        <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
+            <div formArrayName="criterios">
+                <div *ngFor="let criterio of criterios.controls" [formGroup]="criterio">
                     <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
                         <mat-card-header class="header-card header-card--margin">
                             <mat-card-title class="header-card--text textoGris">
-                                Observación de la supervisión
+                                {{ criterio.get( 'nombreCriterio' ).value }}
                             </mat-card-title>
                         </mat-card-header>
                         <mat-card-content style="text-align: left;">
-                            <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
-                            <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la supervisión tiene observaciones a los criterios de pago incluidos en la factura?:</b> Si</p>
-                            <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la supervisión tiene observaciones a los criterios de pago incluidos en la factura?:</b> No</p>
-                            <section [innerHTML]="addressForm.get( 'observaciones' ).value" *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
+                            <p><strong>Tipo de pago:</strong> {{ criterio.get( 'tipoPago' ).value.nombre }} </p>
+                            <!--
+                                    <p><strong>Concepto de pago para el criterio:</strong> {{ criterio.get( 'conceptoPago' ).value.nombre }} </p>
+                                -->
+                            <p><strong>Valor facturado al concepto:</strong> $ {{ criterio.get( 'valorFacturado' ).value
+                                | currency:' ':'symbol-narrow':'.0-0' }} </p>
                         </mat-card-content>
                     </mat-card>
-                </ng-container>
-                <ng-template #noEsVerDetalle>
-                    <div class="row mtop justCenter">
-                        <div class="col-md-7">
-                            <label class="label-left">¿Desde la supervisión tiene observaciones a los criterios de pago incluidos en la factura?</label>
-                        </div>
-                        <div class="col-md-2">
-                            <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput" formControlName="tieneObservaciones">
-                                <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
-                                <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
-                            </mat-radio-group>
-                            <span class="required-form-group" style="margin-left: 1px;">*</span>
-                        </div>
+                </div>
+            </div>
+            <ng-container *ngIf="esVerDetalle === true; else noEsVerDetalle">
+                <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
+                    <mat-card-header class="header-card header-card--margin">
+                        <mat-card-title class="header-card--text textoGris">
+                            Observación de la supervisión
+                        </mat-card-title>
+                    </mat-card-header>
+                    <mat-card-content style="text-align: left;">
+                        <p><b> {{ addressForm.get( 'fechaCreacion' ).value | date: 'dd/MM/yyyy' }} </b></p>
+                        <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"><b>¿Desde la supervisión tiene
+                                observaciones a los criterios de pago incluidos en la factura?:</b> Si</p>
+                        <p *ngIf="addressForm.get( 'tieneObservaciones' ).value === false"><b>¿Desde la supervisión
+                                tiene observaciones a los criterios de pago incluidos en la factura?:</b> No</p>
+                        <section [innerHTML]="addressForm.get( 'observaciones' ).value"
+                            *ngIf="addressForm.get( 'tieneObservaciones' ).value === true"></section>
+                    </mat-card-content>
+                </mat-card>
+            </ng-container>
+            <ng-template #noEsVerDetalle>
+                <div class="row mtop justCenter">
+                    <div class="col-md-7">
+                        <label class="label-left" for="tieneObservaciones" [ngClass]="{
+                                'color-secondaryColor':
+                                  (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                                  (addressForm.get('tieneObservaciones').invalid && estaEditando)
+                              }">¿Desde la supervisión tiene observaciones a los criterios de pago incluidos en la
+                            factura?</label>
                     </div>
-                    <div class="d-flex align-items-center mtop" *ngIf="addressForm.get('tieneObservaciones').value === true">
-                        <div class="text-area-quill izqTitle">
-                            <label for="observaciones" class="text-area-quill--label" style="color: #174193;">Observaciones a los criterios de pago incluidos en la factura</label>
-                            <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required 
-                                (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones></quill-editor>
-                        </div>
-                        <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
-                            {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
-                        </span>
-                        <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
-                            1000
-                        </span>
+                    <div class="col-md-2">
+                        <mat-radio-group aria-labelledby="example-radio-group-label" class="radioInput"
+                            formControlName="tieneObservaciones">
+                            <mat-radio-button class="radio-button" [value]="true">Sí</mat-radio-button>
+                            <mat-radio-button class="radio-button" [value]="false">No</mat-radio-button>
+                        </mat-radio-group>
+                        <span class="required-form-group" style="margin-left: 1px;">*</span>
                     </div>
-                    <button mat-button color="warn" class="btn-guardar"
-                        type="submit" [disabled]="addressForm.dirty === false">
-                        <img src="assets/img/icon/guardar.svg" alt="Guardar">
-                    </button>
-                </ng-template>
-            </form>
+                    <span class="icon-incompleto">
+                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido" [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip" *ngIf="
+                              (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                              (addressForm.get('tieneObservaciones').invalid && estaEditando)
+                              " />
+                    </span>
+                </div>
+                <div class="d-flex align-items-center mtop"
+                    *ngIf="addressForm.get('tieneObservaciones').value === true">
+                    <div class="text-area-quill izqTitle" [ngClass]="{
+                        'color-secondaryColor':
+                          (addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                          (addressForm.get('observaciones').invalid && estaEditando)
+                      }">
+                        <label for="observaciones" class="text-area-quill--label" [ngClass]="{
+                            'colorMainColor':
+                              !((addressForm.get('observaciones').invalid && addressForm.get('observaciones').touched) ||
+                              (addressForm.get('observaciones').invalid && estaEditando))
+                          }">Observaciones a los criterios de pago incluidos en la factura</label>
+                        <quill-editor class="quill-editor-style" [styles]="editorStyle" [modules]="config" required
+                            (onContentChanged)="maxLength($event, 1000)" formControlName="observaciones" #observaciones>
+                        </quill-editor>
+                    </div>
+                    <span class="contador miles" *ngIf="addressForm.get('observaciones').value">
+                        {{1000 - (textoLimpio(observaciones.quillEditor,1000))}}
+                    </span>
+                    <span class="contador miles" *ngIf="addressForm.get('observaciones').value === null">
+                        1000
+                    </span>
+                    <span class="icon-incompleto">
+                        <img class="icon-incompleto--img" src="assets/img/icon/incompleto.svg"
+                            alt="este campo es requerido" [matTooltipPosition]="'above'"
+                            matTooltip="Debe ingresar la información en el campo para continuar"
+                            matTooltipClass="info-tooltip" *ngIf="
+                          (addressForm.get('tieneObservaciones').invalid && addressForm.get('tieneObservaciones').touched) ||
+                          (addressForm.get('tieneObservaciones').invalid && estaEditando)
+                          " />
+                    </span>
+                </div>
+                <button mat-button color="warn" class="btn-guardar" type="submit"
+                    [disabled]="addressForm.dirty === false">
+                    <img src="assets/img/icon/guardar.svg" alt="Guardar">
+                </button>
+            </ng-template>
+        </form>
     </section>
 </section>
